--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- To use Google's MDL -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-indigo.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-yellow.min.css" />
     <title>My First Web Page, with a Favicon</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
 		<div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
 			
 			<!-- Web page header -->
-	    <header class = "mdl-layout__header">
+	    <header class = "mdl-layout__header">                                        
 	      <div class = "mdl-layout__header-row">      
 	        <span class = "mdl-layout-title">My First Web Page, with a Favicon</span>          
 	      </div>       
@@ -34,7 +34,7 @@
 			<!-- Container for web page content -->
 	    <main class = "mdl-layout__content" style = "padding-left:20px">
 				
-		    <h3>See my favicon in the browser tab above.</h3>	
+		    <h3>See my favicon of lebron in the tab above.</h3>	
 				
 				<!-- Slider with Starting Value -->
 				<h6>Here is a slider from Google's MDL:</h6>
